# LiuHookWorld

./: settings.gradle
app/: build.gradle  my-release-key.jks
app/src/androidTest/java/com/hookeasy/liuhookworld/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/MyHook/: ArkariConfig.json  CMakeLists.txt  UnityDumper.cpp  myhook.cpp  myhook_onload.cpp  v1sigparse.cpp
app/src/main/cpp/MyHook/UnityDumper/: UnityDumper.cpp
app/src/main/cpp/MyHook/framework/sk_def/: sk_def.h
app/src/main/cpp/MyHook/framework/sk_hook_adapter/: sk_adapter.cpp  sk_adapter.h  sk_frida_gum_adapter.cpp  sk_module_adapter.cpp  sk_module_adapter.h  sk_shadow_adapter.cpp  sk_watch_dog.cpp  sk_watch_dog.h
app/src/main/cpp/MyHook/include/: myhook.h  sk_hook_macro.h  unityDumper.h
app/src/main/cpp/MyHook/utils/: v1sigparse.cpp
app/src/main/cpp/ShadowHook/: CMakeLists.txt  CMakeLists2.txt  sh_linker.c  shadowhook.c
app/src/main/cpp/ShadowHook/common/: sh_log.h
app/src/main/cpp/ShadowHook/include/: dex_file.h
app/src/main/cpp/unpaircore/: ArkariConfig.json  CMakeLists.txt
app/src/main/cpp/unpaircore/src/: library.c  mem.c  mem.h
app/src/main/java/com/hookeasy/liuhookworld/: MainActivity.java  RootUtils.java  SignatureParser.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hookeasy/liuhookworld/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
